force-app/main/default/objects/custom_create263__c/custom_create263__c.object-meta.xml
<CustomObject>
    <label>Custom created object263</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects263</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>