force-app/main/default/objects/custom_create263__c/fields/custom_create_263field619__c.field-meta.xml
<CustomField>
    <fullName>custom_create_263field619__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 263field619</label>
    <type>Checkbox</type>
</CustomField>