force-app/main/default/objects/custom_create263__c/fields/custom_create_263field671__c.field-meta.xml
<CustomField>
    <fullName>custom_create_263field671__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 263field671</label>
    <type>Checkbox</type>
</CustomField>